2003-01-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h (GetCurrentFiber): Remove blank input field in
	asm code.
	(GetFiberData): Likewise.

2003-01-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winerror.h (ERROR_DIFFERENT_SERVICE_ACCOUNT,
	ERROR_EXE_MACHINE_TYPE_MISMATCH, ERROR_HOOK_TYPE_NOT_ALLOWED,
	ERROR_INVALID_KEYBOARD_HANDLE, ERROR_INVALID_PRINT_MONITOR,
	ERROR_PRINT_MONITOR_IN_USE, ERROR_PRINTER_HAS_JOBS_QUEUED,
	ERROR_REQUIRES_INTERACTIVE_WINDOWSTATION,
	ERROR_SUCCESS_REBOOT_REQUIRED, ERROR_SUCCESS_RESTART_REQUIRED,
	ERROR_TIMEOUT, OR_INVALID_OID, OR_INVALID_OXID,
	OR_INVALID_SET, RPC_X_INVALID_PIPE_OPERATION): Add missing
	error codes.
	Re-sort codes.

2003-01-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winspool.h (PRINTER_INFO_6): Add.
	Reported by: Mat Nieuwenhoven  <matnieuw@users.sourceforge.net>

2002-12-30  Hartmut Honisch <hhonisch@users.sourceforge.net>

	* include/winbase.h (NMPWAIT_WAIT_FOREVER): Cast to DWORD.

	* lib/ntdll.def (NtConnectPort, NtOpenEvent,
	NtRequestWaitReplyPort, NtWaitForSingleObject,ZwConnectPort,
	ZwOpenEvent, ZwRequestWaitReplyPort, ZwWaitForSingleObject):
	Add stubs.

2002-12-30  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wingdi.h (wglGetLayerPaletteEntries): Correct
	prototype. Thanks to: Joe Krahn  <jkrahn at nc dot rr dot com>.

2002-12-26  Dimitri Papadopoulos  <dimitri_at@sourceforge.users.net>

	* include/wingdi.h (DOCINFOA): Replace LPCTSTR with LPCSTR.

2002-12-26  Dimitri Papadopoulos  <dimitri_at@sourceforge.users.net>

	* include/wingdi.h (BALTIC_CHARSET, JOHAB_CHARSET,
	VIETNAMESE_CHARSET): Remove duplicate defines. 
	* lib/comctl32.def (ImageList_SetImageCount): Add stub.

2002-12-26  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/dbt.h (DEV_BROADCAST_PORT): Add UNICODE version.
	Thanks to: Dimitri Papadopoulos  <dimitri_at@sourceforge.users.net>

2002-12-26  Danny Smith  <dannysmith@users.sourceforge.net>
