@@ -6,10 +6,9 @@ void* GetCurrentFiber(void)
 {
     void* ret;
     __asm__ volatile (
-	      "movl	%%fs:0x10,%0"
-	      : "=r" (ret) /* allow use of reg eax,ebx,ecx,edx,esi,edi */
-		  :	
-		);
+	"movl	%%fs:0x10,%0"
+	: "=r" (ret) /* allow use of reg eax,ebx,ecx,edx,esi,edi */
+	);
     return ret;
 }
 
@@ -17,11 +16,10 @@ void* GetFiberData(void)
 {
     void* ret;
     __asm__ volatile (            
-	      "movl	%%fs:0x10,%0\n"
-	      "movl	(%0),%0"
-	      : "=r" (ret) /* allow use of reg eax,ebx,ecx,edx,esi,edi */
-		  :	
-	      );
+	"movl	%%fs:0x10,%0\n"
+	"movl	(%0),%0"
+	: "=r" (ret) /* allow use of reg eax,ebx,ecx,edx,esi,edi */
+	);
     return ret;
 }
 
