@@ -1,5 +1,11 @@
 2003-01-02  Danny Smith  <dannysmith@users.sourceforge.net>
 
+	* lib/kernel32.c (GetCurrentFiber): Remove blank input field in
+	asm code.
+	(GetFiberData): Likewise.
+
+2003-01-02  Danny Smith  <dannysmith@users.sourceforge.net>
+
 	* include/winnt.h (GetCurrentFiber): Remove blank input field in
 	asm code.
 	(GetFiberData): Likewise.
